--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ __pycache__/
 *.egg
 *.egg-info/
 *.parquet
+*.pkl
+*.h5
+*.xlsx
+*.csv
+*.log
+*.json
+*.pdf
 
 # Jupyter
 .ipynb_checkpoints/
@@ -12,6 +19,8 @@ __pycache__/
 # VS Code
 .vscode/
 Flights/
+Statistics/
+Pictures/
 
 # Virtual environment
 .venv/
