--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,19 @@ version = "0.1.0"
 description = ""
 authors = ["Alex"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-traffic = "^2.10.2"
+traffic = ">=2.10.2,<2.13"
 plotly = "^5.24.0"
 nbformat = ">=4.2.0"
-
+streamlit = "^1.37.0"
+joblib = "^1.4.2"
+geopy = "^2.4.1"
+ipyleaflet = "^0.20.0"
+scikit-learn = "^1.7.0"
+openpyxl = "^3.1.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
